@@ -1,3 +1,11 @@
+2000-06-08 12:34:26  Urban Engberg <ue@ccieurope.com>
+
+	* gnus-demon.el (gnus-demon-scan-mail): Bind nnmail-fetched-sources.
+
+2000-06-08 12:27:55  Shenghuo ZHU  <zsh@cs.rochester.edu>
+
+	* message.el (message-syntax-checks): Add type.
+
 2000-06-07  Dave Love  <fx@gnu.org>
 
 	* mm-view.el (mm-inline-image-emacs): Don't specify string for
